; ModuleID = '/home/carl/AnghaBench/freebsd/stand/libsa/extr_nfs.c_nfs_close.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/libsa/extr_nfs.c_nfs_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.open_file = type { i32* }
%struct.nfs_iodesc = type { i32 }

@debug = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nfs_close(%struct.open_file* %0) #0 {
  %2 = alloca %struct.open_file*, align 8
  %3 = alloca %struct.nfs_iodesc*, align 8
  store %struct.open_file* %0, %struct.open_file** %2, align 8
  %4 = load %struct.open_file*, %struct.open_file** %2, align 8
  %5 = getelementptr inbounds %struct.open_file, %struct.open_file* %4, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  %7 = bitcast i32* %6 to %struct.nfs_iodesc*
  store %struct.nfs_iodesc* %7, %struct.nfs_iodesc** %3, align 8
  %8 = load %struct.nfs_iodesc*, %struct.nfs_iodesc** %3, align 8
  %9 = call i32 @free(%struct.nfs_iodesc* %8)
  %10 = load %struct.open_file*, %struct.open_file** %2, align 8
  %11 = getelementptr inbounds %struct.open_file, %struct.open_file* %10, i32 0, i32 0
  store i32* null, i32** %11, align 8
  ret i32 0
}

declare dso_local i32 @free(%struct.nfs_iodesc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
